styles/style.css
* {
    margin: 0;
    padding: 0;
}

body {
    background-image: url(../images/background-pic.jpg);
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
    color: rgb(243,243,243);
    font-family: 'Montserrat', sans-serif;
}

h1 {
    font-size: 40px;
}

#title {
    text-align: center;
    line-height: 45px;
    margin: 50px auto;
    font-size: 20px;
}

#all-questions-div {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.question-box-div {
    width: 625px;
    margin-bottom: 50px;
}

.question-div {
    background-color: rgba(70, 70, 70, .5);
    font-size: 21px;
    border-radius: 5px 5px 0 0px;
    padding: 3px 10px;
}

.answer-div {
    background-color: rgba(70, 70, 70, .5);
    border-radius: 0 0 5px 5px;
    padding: 4px 10px 10px 10px;
    display: flex;
    flex-direction: column;
}

.textbox {
    width: 600px;
    height: 25px;
    border-radius: 5px;
    font-size: 19px;
}

label {
    margin: 10px 0;
    font-size: 17px;
}

select {
    min-height: 2rem;
    font-size: 17px;
}

textarea {
    width: 600px;
    height: 200px;
    font-size: 17px;
}

button {
    background-color: rgb(50, 205, 50);
    border: none;
    color: white;
    padding: 12px 285px;
    border-radius: 2px;
    font-size: 17px;
    cursor: pointer;
    margin-bottom: 70px;

}

@media only screen and (max-width: 700px) {
    .question-box-div {
        width: 500px;
    }

    .textbox {
        width: 475px;
    }

    textarea {
        width: 475px;
    }

    button {
        padding: 12px 220px;
    }
}

@media only screen and (max-width: 500px){
    .question-box-div {
        width: 300px;
    }

    .textbox {
        width: 275px;
    }

    textarea {
        width: 275px;
    }

    button {
        padding: 12px 110px;
    }

    h1 {
        margin-bottom: 15px;
        line-height: 40px;
    }

    #title {
        line-height: 30px;
        padding: 0px 15px
    }
}

